[gd_scene load_steps=40 format=2]

[ext_resource path="res://Weapons/평범한 검.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Wand.tscn" type="PackedScene" id=2]
[ext_resource path="res://graphics/shadows/LargeShadow.png" type="Texture" id=4]
[ext_resource path="res://audio/foot_step_grass.mp3" type="AudioStream" id=5]
[ext_resource path="res://graphics/player/player_idle_sprite.png" type="Texture" id=6]
[ext_resource path="res://graphics/player/player_walk_sprite.png" type="Texture" id=7]
[ext_resource path="res://Weapons/나무꾼이 떨어뜨린 도끼.tscn" type="PackedScene" id=8]
[ext_resource path="res://Weapons/말라비틀어진 나뭇가지.tscn" type="PackedScene" id=9]
[ext_resource path="res://player/LevelUP.tscn" type="PackedScene" id=10]
[ext_resource path="res://Weapons/노인과 지팡이.tscn" type="PackedScene" id=11]
[ext_resource path="res://Weapons/냥냥이의 장난감 낚싯대.tscn" type="PackedScene" id=12]
[ext_resource path="res://Weapons/녹슨 삼지창.tscn" type="PackedScene" id=13]
[ext_resource path="res://Weapons/고깔색 레이피어.tscn" type="PackedScene" id=14]
[ext_resource path="res://Weapons/정육점 창.tscn" type="PackedScene" id=15]
[ext_resource path="res://Weapons/Bow.tscn" type="PackedScene" id=16]
[ext_resource path="res://Weapons/초심자용 활.tscn" type="PackedScene" id=17]
[ext_resource path="res://graphics/font/stardust.tres" type="DynamicFont" id=18]
[ext_resource path="res://graphics/light_.png" type="Texture" id=19]
[ext_resource path="res://player/Player.gd" type="Script" id=25]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=14]
radius = 13.4246
height = 10.284

[sub_resource type="Animation" id=15]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=16]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=17]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "player_damaged" ],
"method": "emit_signal"
} ]
}

[sub_resource type="Animation" id=18]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=19]
resource_name = "dead"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/Fade")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.6, 0.3, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "player_die" ],
"method": "emit_signal"
} ]
}

[sub_resource type="CapsuleShape2D" id=20]
radius = 24.0
height = 16.965

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_mask = 4
script = ExtResource( 25 )
acc = 120
max_speed = 200

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 10 )
texture = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 4, 4 )
frames = SubResource( 13 )
animation = "Walk"
frame = 5

[node name="collision" type="CollisionShape2D" parent="." groups=[
"player",
]]
visible = false
rotation = 1.5708
shape = SubResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 15 )
anims/Walk = SubResource( 16 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 17 )
anims/Stop = SubResource( 18 )

[node name="DissolveAnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 19 )

[node name="Wand" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 20 )

[node name="Weapons" type="Node2D" parent="."]

[node name="나무꾼이 떨어뜨린 도끼" parent="Weapons" instance=ExtResource( 8 )]
visible = false

[node name="평범한 검" parent="Weapons" instance=ExtResource( 1 )]
visible = false

[node name="말라비틀어진 나뭇가지" parent="Weapons" instance=ExtResource( 9 )]
visible = false

[node name="냥냥이의 장난감 낚싯대" parent="Weapons" instance=ExtResource( 12 )]
visible = false

[node name="노인과 지팡이" parent="Weapons" instance=ExtResource( 11 )]
visible = false

[node name="고깔색 레이피어" parent="Weapons" instance=ExtResource( 14 )]
visible = false

[node name="녹슨 삼지창" parent="Weapons" instance=ExtResource( 13 )]
visible = false

[node name="정육점 창" parent="Weapons" instance=ExtResource( 15 )]
visible = false

[node name="초심자용 활" parent="Weapons" instance=ExtResource( 17 )]
visible = false

[node name="Bow" parent="." instance=ExtResource( 16 )]
position = Vector2( 0, 20 )

[node name="ManaUpdate" type="Timer" parent="."]

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -15.5175 )
shape = SubResource( 20 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
bus = "SFX"

[node name="FootStepTimer" type="Timer" parent="."]
one_shot = true

[node name="LevelUP" parent="." instance=ExtResource( 10 )]
visible = false

[node name="dashTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.03

[node name="interectE" type="Label" parent="."]
visible = false
margin_left = -73.8141
margin_top = -76.989
margin_right = 117.186
margin_bottom = -44.989
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 18 )
text = "[E] 키를 눌러 입장"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 19 )
energy = 0.8
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 2
shadow_filter_smooth = 50.0

[node name="Light2D2" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 19 )
energy = 0.5
shadow_gradient_length = 3.0
shadow_filter = 2
shadow_filter_smooth = 50.0

[connection signal="timeout" from="ManaUpdate" to="." method="_on_ManaUpdate_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_HurtBox_area_exited"]
[connection signal="timeout" from="dashTimer" to="." method="_on_dashTimer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_GhostTimer_timeout"]

[editable path="Wand"]
